--- a/Azure/styles.css
+++ b/Azure/styles.css
@@ -635,12 +635,109 @@ filter:grayscale(1)
     padding: 16px 24px 24px;
 }
 
+/* video game */
+
+.video-container{
+    position: relative;
+}
+.game-contents{
+    background: #000000;
+    padding: 48px 12px;
+    margin-top: -25px;
+}
+.game-contents h2{
+    font-size: 19px;
+    line-height: 1.2;
+    margin-top: 20px;
+    transform: translate(2px, 0px);
+}
+.game-contents h2,span,a{
+    font-family: 'cereal-medium';
+    color: #fff;
+    text-decoration: none;
+}
+.game-contents .play-btn{
+    border: 1px solid #0078d4;
+    background: #0078d4;
+    border-radius: 1px;
+    padding: 8px 14px;
+    cursor: pointer;
+}
+.play-btn i{
+    margin-right: 5px;
+    
+}
+.button-section{
+    transform: translate(3px, 14px);
+}
+br{
+    display: block;
+}
+.more-stories i{
+    font-size: 15px;
+    padding-left: 7px;
+}
+
+/* cards */
+.container-cards{
+    margin: 45px 12px;
+}
+.service-free{
+    border: 1px solid transparent;
+    box-shadow: 0 0.1875rem 0.4375rem 0 rgb(0 0 0 / 13%), 0 0.0625rem 0.125rem 0 rgb(0 0 0 / 11%);
+    border-radius: 6px;
+    background: #243a5e;
+    margin: 0px 0px 48px;
+    padding: 0px 12px;
+}
+.service-free:hover{
+    box-shadow: 0 .375rem .875rem 0 rgba(0,0,0,.13),0 .0625rem .25rem 0 rgba(0,0,0,.11);
+}
+.service-free:nth-child(2){
+    background: #000000;
+}
+.service-free:nth-child(3){
+    background: #0062ad;
+}
+.service-img{
+    padding: 18px 13px 0px;
+}
+.cards-details{
+    padding: 1px 8px 0px;
+}
+.cards-details h2{
+    font-family: 'cereal-medium';
+    text-decoration: underline;
+    color: #fff;
+    font-size: 1.125rem;
+}
+.cards-details p{
+    transform: translateY(-10px);
+    font-family: 'cereal-medium';
+    font-size: 1rem;
+    color: #fff;
+}
+.space-last{
+    padding: 10px;
+}
+
+
 
 
 
 @media screen and (min-width:514px){
     .icon-scroll{
         justify-content: center;
+    }
+}
+@media screen and (min-width:534px){
+    br{
+        display: none;
+    }
+     .more-stories{
+        position: absolute;
+        left: 250px;
+        margin-top: -12px;
     }
 }
 
@@ -1039,6 +1136,45 @@ margin-top: 24px;
 .content-text h2{
     text-align: center;
 }
+    /* video play */
+   .game-contents{
+    width: 94.5%;
+    margin: 0px 10px;
+    position: relative;
+    top: -55px;
+ 
+  } .game-contents h2{
+    width: 93%;
+    padding: 4px 0px 0px 30px;
+    margin-top: -5px;
+  }
+  .play-btn{
+    margin-left: 30px;
+  }
+  .more-stories{
+    position: absolute;
+    left: 280px;
+    top: 138px;
+    margin-top: -12px;
+  }
+  .button-section{
+    padding-bottom: 25px;
+  }
+
+  /* help desk card */
+  .container-cards{
+    margin: -8px 12px;
+    display: flex;
+    gap: 20px;
+
+  }
+  .service-free{
+    width: 100%;
+  }
+  .cards-details{
+    padding: 0px 10px 0px;
+  }
+
 
 }
 @media screen and (min-width:866px){
@@ -1426,8 +1562,27 @@ margin-top: 24px;
     .containers{
      padding: 0px 100px;
     }
-}
 
+
+  /* video play */
+.game-contents{
+    padding: 25px 67px 65px 47px;
+    margin: -47px 10px;
+    position: absolute;
+    left: 50px;
+    top: 100px;
+    width: 43%;
+    height: 39.31%;
+    
+ }
+ .more-stories{
+     position: static;
+ }
+ br{
+     display: block;
+ }
+ 
+}
 
 
 @media screen and (min-width:1094px){
