--- a/Airbnb/style.css
+++ b/Airbnb/style.css
@@ -135,6 +135,10 @@ nav {
     display: none;
 }
 
+.filter-container {
+    display: none;
+}
+
 /* category img list */
 .grid-mg img {
     width: 24px;
@@ -143,7 +147,7 @@ nav {
 .grid-category {
     padding: 0px 22px;
     display: grid;
-    grid-template-columns: repeat(60, 1fr);
+    grid-template-columns: repeat(26, 1fr);
     gap: 23px;
     height: 98px;
     overflow: scroll;
@@ -160,6 +164,7 @@ nav {
 .object-colmn {
     opacity: 0.5;
     padding: 0px 7px;
+    height: 79px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -178,42 +183,46 @@ nav {
     font-size: 12px;
 }
 
-.filter-container {
-    display: flex;
-    align-items: center;
-}
-
-.category-colmn {
-    display: flex;
-    padding: 0px 40px;
-    margin-top: 6px;
-}
-
-/* right list filter */
-.img-text-filter {
-    display: flex;
-    padding: 2px 16px 0px;
-    gap: 5px;
-}
-.img-text-filter span{
-    font-family: 'cereal-book';
-    font-size: 12px;
-}
-.filter{
-    display: flex;
-    align-items: center;
-    border: 1px solid #dbd6d6;
-    border-radius: 12px;
-    padding: 7px 0px;
-    height: 48px;
-}
 
 /* media query */
 @media screen and (min-width: 744px) {
-    .grid-category{
+    .category-colmn {
+        display: flex;
+        padding: 0px 40px;
+        margin-top: 6px;
+    }
+
+    /* right list filter */
+    .filter-container {
+        display: flex;
+        align-items: center;
+    }
+
+    .img-text-filter {
+        display: flex;
+        padding: 2px 16px 0px;
+        gap: 5px;
+    }
+
+    .img-text-filter span {
+        font-family: 'cereal-book';
+        font-size: 12px;
+    }
+
+    .filter {
+        display: flex;
+        align-items: center;
+        border: 1px solid #dbd6d6;
+        border-radius: 12px;
+        padding: 7px 0px;
+        height: 48px;
+    }
+
+    .grid-category {
         padding: 0px 0px;
         gap: 36px;
     }
+
     nav {
         border-bottom: 1px solid #dbd6d6;
         padding: 14px 40px 0px 24px;
@@ -395,7 +404,6 @@ nav {
     }
 
     .text-one {
-        /* padding: 0px 19px 1.5px 15px; */
         padding: 0px 17px 0px 15px;
     }
 
@@ -405,8 +413,6 @@ nav {
 
     .text-last {
         padding: 0px 14px 0px 15px;
-        /* padding: 0px 10px 0px 15px; */
-
     }
 
     .logo-img {
@@ -467,7 +473,6 @@ nav {
     .search-center-tab {
         display: block;
     }
-
     /* .search-center{
         display: none;
     } */
