--- a/Azure/styles.css
+++ b/Azure/styles.css
@@ -843,11 +843,8 @@ br {
 }
 
 .footer-row {
-    margin-top: 36px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 18px;
-    padding-right: 18px;
+    margin: 36px auto 0px  auto;
+    padding: 0px 18px;
 }
 
 .footer-row li:hover {
@@ -917,18 +914,18 @@ br {
 
 .footer-link ul {
     display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: flex-end;
     margin: 0px;
     padding: 0px;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    align-items: flex-start;
 }
 
 .footer-link li {
     list-style-type: none;
+    line-height: 1.2;
     margin: 0px 0px 12px 16px;
     padding: 2px 0px;
-    line-height: 1.2;
 }
 
 .bold {
@@ -947,21 +944,19 @@ br {
 }
 
 .fix-msg {
-
     position: fixed;
     right: 14px;
     bottom: -10px;
-
 }
 
 .pop-up {
     display: flex;
     align-items: baseline;
     color: #fff;
-    padding: 10px 12px 16px 15px;
     border: 1px solid #0067b8;
     background: #0067b8;
     border-radius: 6px;
+    padding: 10px 12px 16px 15px;
     width: 135px;
     gap: 5px;
 }
@@ -1941,12 +1936,11 @@ br {
 
     /* images */
     .img-info {
-        width: 50%;
-        margin-left: 55px;
         position: absolute;
+        margin-left: 55px;
         margin-top: -249px;
-        padding: 15px;
-        padding-top: 20px;
+        padding: 20px 15px 15px 15px;
+        width: 50%;
     }
 
     .img-info h3 {
